--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,54 @@
   font-weight: 200;
 }
 
+@font-face {
+  font-family: 'Gilroy', sans-serif;
+  src: url('fonts/Gilroy-Light.ttf') format('truetype');
+  font-weight: 250;
+}
+
+@font-face {
+  font-family: 'Gilroy', sans-serif;
+  src: url('fonts/Gilroy-Regular.ttf') format('truetype');
+  font-weight: 350;
+}
+
+@font-face {
+  font-family: 'Gilroy', sans-serif;
+  src: url('fonts/Gilroy-Medium.ttf') format('truetype');
+  font-weight: 450;
+}
+
+@font-face {
+  font-family: 'Gilroy', sans-serif;
+  src: url('fonts/Gilroy-Semibold.ttf') format('truetype');
+  font-weight: 550;
+}
+
+@font-face {
+  font-family: 'Gilroy', sans-serif;
+  src: url('fonts/Gilroy-Bold.ttf') format('truetype');
+  font-weight: 650;
+}
+
+@font-face {
+  font-family: 'Gilroy', sans-serif;
+  src: url('fonts/Gilroy-Extrabold.ttf') format('truetype');
+  font-weight: 750;
+}
+
+@font-face {
+  font-family: 'Gilroy', sans-serif;
+  src: url('fonts/Gilroy-Black.ttf') format('truetype');
+  font-weight: 850;
+}
+
+@font-face {
+  font-family: 'Gilroy', sans-serif;
+  src: url('fonts/Gilroy-Heavy.ttf') format('truetype');
+  font-weight: 950;
+}
+
 body {
   font-family: 'Gilroy', sans-serif;
   background-color: transparent;
